# Server_State_Telemetry_Demon

./: .antigravityrules  .clangd  .gitignore  CMakeLists.txt  README.md  README_EN.md  README_KR.md  main.cpp  sstd.service
.github/workflows/: ci.yml
config/: sstd.ini
docs/: PROJECT_DESCRIPTION.md  PROJECT_DESCRIPTION_EN.md  PROJECT_DESCRIPTION_KR.md  PROTOCOL.md  PROTOCOL_KR.md
include/: CircularBuffer.hpp  Config.hpp  FileDescriptor.hpp  Logger.hpp  NoiseSession.hpp  PacketUtil.hpp  Protocol.hpp  SystemReader.hpp  TcpServer.hpp  utility.hpp
lib/: monocypher.c  sha256.cpp  sha256.hpp  siphash.hpp
lib/libsodium/lib/: libsodium.la
lib/libsodium/lib/pkgconfig/: libsodium.pc
src/: NoiseSession.cpp  PacketUtil.cpp  SystemReader.cpp  TcpServer.cpp
test/: test_client.py  test_multi_client.py
